src/test/ui/parser/extern-no-fn.stderr
error: expected one of `!` or `::`, found `(`
  --> $DIR/extern-no-fn.rs:2:6
   |
LL | extern "C" {
   |            - while parsing this item list starting here
LL |     f();
   |      ^ expected one of `!` or `::`
LL | }
   | - the item list ends here

error: aborting due to previous error

